[project]
name = "assignment-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "gitsource>=0.0.5",
    "ipykernel>=7.3.0",
    "minsearch>=0.1.1",
    "openai>=2.43.0",
    "pydantic-ai>=1.107.0",
]
